welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: ':' expected but ')' found.
def colorierSol(Color){
                     ^MethodsPicture:31: error: identifier expected but '}' found.
}
^