welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	faireV(c: Color.yellow)
	faireV(Color.red)
	faireV(Color.blue)
	faireV(Color.green)
}
def faireV(c:Color) {
	avance()
	colorierSol(Color)
	avance()
	gauche()
	avance()
	colorierSol(Color)
	retourne()
	avance()
	gauche()
	avance()
	colorierSol(Color)
	avance()
	gauche()
	
}
def colorierSol(Color){
	setBrosseCouleur(Color)
	baisseBrosse()
	leveBrosse()
}
